# django3

./: pyproject.toml
Catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
Catalog/fixtures/: Catalog_fixture.json  categories.json  products.json
Catalog/management/commands/: populate_db.py
Catalog/migrations/: 0001_initial.py  0002_product_manufactured_at_alter_product_picture.py  0003_remove_product_manufactured_at.py  0004_alter_product_create_at_alter_product_updated_at.py  0005_alter_product_create_at_alter_product_updated_at.py  0006_blogpost.py  0007_version.py  0008_alter_version_options.py  0009_product_owner.py  0010_delete_blogpost.py  0011_alter_product_options_product_is_published.py  0012_alter_product_options_alter_product_picture.py
Catalog/templates/: base.html  catalog.html  product_details.html
Catalog/templates/includes/: inc_menu.html
Catalog/templates/product/: base.html  blogpost_detail.html  home.html  (+7 more)
Catalog/templatetags/: my_tags.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blogpost_owner.py
blog/templates/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
djangoProject/: settings.py  urls.py
static/css/: bootstrap.min.css
user/: admin.py  forms.py  models.py  urls.py  views.py
user/fixtures/: groups.json  permissions.json
user/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_user_token.py
user/templates/: login.html  password_reset.html  verificate_email.html
(+3 files in other folders)
